<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserType">


    <!--    <include layout="@layout/content_main" />-->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/usertype_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/register_type"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:textSize="25dp"
        android:lineSpacingExtra="20dp"
        android:gravity="center" />

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <Button
           android:id="@+id/taker_button"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:layout_centerInParent="true"
           android:layout_centerHorizontal="true"
           android:text="@string/taker" />

       <Button
           android:id="@+id/giver_button"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:layout_centerHorizontal="true"
           android:layout_below="@id/taker_button"
           android:layout_marginTop="30dip"
           android:text="@string/giver" />

   </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>