<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">




    <ScrollView
        android:id="@+id/scrollView_activityMainGiver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phone_id_giver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:inputType="phone"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/phone_number" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/send_button_giver"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/send_code"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="92dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/verification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/verification_code"
                android:textColor="#000000"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/verification_id_giver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/verification_code"
                android:inputType="number" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="40dp">
<!--                <Button-->
<!--                    android:id="@+id/send_button_giver"-->
<!--                    android:layout_width="140dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/send_code"-->
<!--                    tools:layout_editor_absoluteX="148dp"-->
<!--                    tools:layout_editor_absoluteY="92dp" />-->

                <Button
                    android:id="@+id/verify_button_giver"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/verify"
                    app:layout_constraintEnd_toStartOf="@+id/button2"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="92dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>